--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
     <!-- End Services Section -->
 
     <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us">
+    <!-- <section id="why-us" class="why-us">
       <div class="container-fluid">
         <header class="section-header">
           <h3>Why choose us?</h3>
@@ -726,11 +726,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Why Us Section -->
 
     <!-- ======= Call To Action Section ======= -->
-    <section id="call-to-action" class="call-to-action wow fadeInUp">
+    <!-- <section id="call-to-action" class="call-to-action wow fadeInUp">
       <div class="container">
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
@@ -747,11 +747,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!--  End Call To Action Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!-- <section id="features" class="features">
       <div class="container">
         <div class="row feature-item">
           <div class="col-lg-6 wow fadeInUp">
@@ -806,11 +806,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Features Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
+    <!-- <section id="portfolio" class="portfolio section-bg">
       <div class="container">
         <header class="section-header">
           <h3 class="section-title">Gallery</h3>
@@ -964,11 +964,11 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <!-- <section id="testimonials" class="testimonials">
       <div class="container">
         <header class="section-header">
           <h3>Testimonials</h3>
@@ -1027,7 +1027,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
